--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     },
     "require-dev": {
         "mockery/mockery": "^1.6",
-        "orchestra/testbench": "^9.0",
+        "orchestra/testbench": "^8.0|^9.0",
         "pestphp/pest": "^2.0"
     },
     "autoload": {
